MainMethodTestCases/src/com/example/valid/Main4.java
package com.example.valid;

public class Main4 {
	
	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method, except that it throws an
	 * exception. This is completely valid.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String[] args) throws Exception {
		System.out.println("Main4!");
	}
	
}
